--- a/css/style.css
+++ b/css/style.css
@@ -87,7 +87,8 @@ body {
   grid-column: 2;
   grid-row: 2;
   justify-self: center;
-  align-self: flex-end;
+  align-self: end;
+  padding-bottom: 20px;
 }
 
 #clock {
@@ -245,7 +246,7 @@ a {
 }
 #todo-list div {
   display: grid;
-  grid-template-columns: 30px 190px 30px;
+  grid-template-columns: 30px minmax(0, auto) 30px;
   padding-bottom: 5px;
 }
 
